--- a/DateTimeOffsetExtension/DateTimeOffsetExtension.csproj
+++ b/DateTimeOffsetExtension/DateTimeOffsetExtension.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Version>1.0.10</Version>
+    <Version>1.0.12</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>RAGS.DateTimeOffsetExtension</PackageId>
     <Title>DateTimeOffsetExtension</Title>
@@ -12,6 +12,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Description>RAGS extensions.</Description>
+    <PackageProjectUrl>https://github.com/richardags/RAGS.ExtensionsHelper</PackageProjectUrl>
+    <AssemblyName>RAGS.DateTimeOffsetExtension</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
